Improved our OntologyManager (OBO loader, etc.) to actually use "cache" (serialized OntologyAccess objects). Cleaned up and polished some more things and log configs.